--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Werkzeug==3.0.3
 openai==0.28
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
 # transformers==4.44.0
 # torch==2.4.0
 # deep-translator==1.11.4
