--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Python311
+home = C:\Users\dafiq\AppData\Local\Programs\Python\Python310
 include-system-site-packages = false
-version = 3.11.4
-executable = C:\Python311\python.exe
-command = C:\Python311\python.exe -m venv E:\KULIAH\OTOBOOK\otobook_API\myenv
+version = 3.10.11
