--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ openai==0.28
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.6.0
 fuzzywuzzy==0.18.0
+boto3
+pandas
+textract-trp
+botocore
+amazon-textract-response-parser
 # transformers==4.44.0
 # torch==2.4.0
 # deep-translator==1.11.4
