--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -8,12 +8,16 @@ on:
 
 jobs:
 
-  build:
+  Deploy:
 
     runs-on: ubuntu-latest
 
     steps:
-    - name: Login Docker
+    - uses: actions/checkout@v3
+    - name: Login Dockerhub
+      env:
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: Pull Docker image
       run: sudo docker pull farih652/digitallibrary-backend:latest
