--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,7 +18,7 @@ jobs:
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      run: docker login -u $DOCKER_USERNAME -p dckr_pat_NEpMbTUOvtO7-b9ZP0pHMyI4S0s
     - name: Pull Docker image
       run: sudo docker pull farih652/digitallibrary-backend:latest
     - name: Delete Old docker container
