--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,15 +10,9 @@ jobs:
 
   Deploy:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Login Dockerhub
-      env:
-        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: docker login -u $DOCKER_USERNAME -p dckr_pat_NEpMbTUOvtO7-b9ZP0pHMyI4S0s
     - name: Pull Docker image
       run: sudo docker pull farih652/digitallibrary-backend:latest
     - name: Delete Old docker container
