--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -22,3 +22,16 @@ jobs:
       run: docker build -t farih652/digitallibrary-backend .
     - name: Push to Dockerhub
       run: docker push farih652/digitallibrary-backend:latest
+
+
+  Deploy:
+
+    runs-on: self-hosted
+
+    steps:
+    - name: Pull Docker image
+      run: docker pull farih652/digitallibrary-backend:latest
+    - name: Delete Old docker container
+      run: sudo docker rm -f digitallibrary-container || true
+    - name: Run Docker Container
+      run: sudo docker run -d -p 8080:8080 --name digitallibrary-container farih652/digitallibrary-backend
